dev/remote-package/tests/parser/syntax-error/jsx.jsx
export default function Foo(props) {
	return <div ...props />;
}
